# reli

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/reli/: __init__.py  cli.py  configgen.py  demo.py  registry.py
tests/: test_configgen.py  test_registry.py  test_smoke.py
